--- a/Rest-with-SpringBoot-and-java/src/main/resources/application.yml
+++ b/Rest-with-SpringBoot-and-java/src/main/resources/application.yml
@@ -6,10 +6,9 @@ spring:
       password: admin
   jpa:
     hibernate:
-      ddl-auto: update
-      show_sql: false
-    open-in-view: false
-#    properties:
-#      hibernate:
-#        dialect: org.hibernate.dialect.MySQLDialect
+      ddl-auto: none
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    show-sql: false
 
