--- a/Rest-with-SpringBoot-and-java/src/main/resources/application.yml
+++ b/Rest-with-SpringBoot-and-java/src/main/resources/application.yml
@@ -9,6 +9,5 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.MySQL8Dialect
-    show-sql: false
-
+        show-sql: false
+    open-in-view: true 
