--- a/Rest-with-SpringBoot-and-java/pom.xml
+++ b/Rest-with-SpringBoot-and-java/pom.xml
@@ -17,6 +17,7 @@
 	<properties>
 		<java.version>21</java.version>
 		<dozer.version>6.4.0</dozer.version>
+		<springdoc.version>2.5.0</springdoc.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -66,6 +67,13 @@
 		<!--			<groupId>mysql</groupId>-->
 		<!--			<artifactId>mysql-connector-java</artifactId>-->
 		<!--		</dependency>-->
+
+		<dependency>
+			<groupId>org.springdoc</groupId>
+			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
+			<version>${springdoc.version}</version>
+		</dependency>
+
 
 		<dependency>
 			<groupId>com.fasterxml.jackson.dataformat</groupId>
