--- a/Rest-with-SpringBoot-and-java/src/main/resources/application.yml
+++ b/Rest-with-SpringBoot-and-java/src/main/resources/application.yml
@@ -10,4 +10,9 @@ spring:
     properties:
       hibernate:
         show-sql: false
-    open-in-view: true 
+    open-in-view: true
+springdoc:
+  paths-to-match: /api/**/v1/**
+  swagger-ui:
+    use-root-path: true
+
