--- a/Rest-with-SpringBoot-and-java/pom.xml
+++ b/Rest-with-SpringBoot-and-java/pom.xml
@@ -19,7 +19,6 @@
 		<dozer.version>6.4.0</dozer.version>
 		<springdoc.version>2.5.0</springdoc.version>
 		<testcontainers.version>1.16.3</testcontainers.version>
-		<rest-assured.version>5.4.0</rest-assured.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -43,6 +42,12 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.hateoas</groupId>
 			<artifactId>spring-hateoas</artifactId>
@@ -57,14 +62,13 @@
 		<dependency>
 			<groupId>io.rest-assured</groupId>
 			<artifactId>rest-assured</artifactId>
-			 <version>${rest-assured.version}</version>
 			<scope>test</scope>
 		</dependency>
 
 		<dependency>
 			<groupId>org.testcontainers</groupId>
 			<artifactId>mysql</artifactId>
-			
+
 			<scope>test</scope>
 		</dependency>
 
