--- a/Rest-with-SpringBoot-and-java/src/main/resources/application.yml
+++ b/Rest-with-SpringBoot-and-java/src/main/resources/application.yml
@@ -1,3 +1,5 @@
+cors:
+  originPatterns: http://localhost:3000,http://localhost:8080,https://edersombarros.github.io
 spring:
   datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
