--- a/Rest-with-SpringBoot-and-java/src/test/resources/application.yml
+++ b/Rest-with-SpringBoot-and-java/src/test/resources/application.yml
@@ -1,15 +1,17 @@
 server:
   port: 8888
+cors:
+  originPatterns: http://localhost:3000,http://localhost:8080,https://edersombarros.github.io
 spring:
   datasource:
       driver-class-name: com.mysql.cj.jdbc.Driver
   jpa:
+   hibernate:
+     ddl-auto: none
+   properties:
     hibernate:
-      ddl-auto: none
-    properties:
-      hibernate:
-        show-sql: false
-    open-in-view: true
+        dialect: org.hibernate.dialect.MySQL8Dialect
+    show-sql: false
 springdoc:
   paths-to-match: /api/**/v1/**
   swagger-ui:
